syntax = "proto3";

option java_multiple_files = true;
option java_package = "kr.pe.jonghak.demo.user.api";
option java_outer_classname = "UserProto";

message UserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserReply {
  string id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc GetUser (UserRequest) returns (UserReply) {}
}
